# sorm

./: Cargo.toml  README.md
sorm/: Cargo.toml
sorm-compile-tests/: Cargo.toml
sorm-compile-tests/src/: edge_field_attributes.rs  edge_table_attributes.rs  lib.rs  main.rs  node_field_attributes.rs  node_table_attributes.rs
sorm-derive/: Cargo.toml
sorm-derive/src/: lib.rs
sorm-derive/src/migrations/: table.rs
sorm-derive/src/models/: edge.rs  node.rs  object.rs
sorm-derive_helpers/: Cargo.toml
sorm-derive_helpers/src/migrations/: table.rs
sorm-derive_helpers/src/models/: edge.rs  node.rs  object.rs  utils.rs
sorm-derive_helpers/src/models/field_meta/: attr_type_db.rs  attrs_expr_or_path.rs  custom_type.rs  custom_type_inference.rs  relations.rs  token_wrappers.rs
sorm-derive_helpers/src/models/field_meta/derive_attributes/: db_field_types.rs
sorm-derive_helpers/src/models/table_meta/: derive_attributes.rs
sorm-derive_helpers/src/models/token_codegen/: define_statement.rs  field_value_setter.rs  mod.rs  relate.rs  serialized_field_fmts.rs  struct_partial.rs
sorm-derive_helpers/src/utilities/: pick.rs
sorm-derive_helpers/tests/: generate_test.rs  invalid_combo_of_define_table_attrs.rs  table_name.rs
sorm-examples/ch02-data-model/listing-01-alien/: Cargo.toml
sorm-examples/migration-cli/: Cargo.toml
sorm-examples/migration-cli/src/: main.rs
sorm-examples/migration-embedded/: Cargo.toml
sorm-examples/migration-embedded/src/: main.rs
sorm-examples/migration-filebased/: Cargo.toml
sorm-examples/migration-filebased/src/: main.rs
sorm-examples/migrations-simple/: Cargo.toml
sorm-macros-helpers/: Cargo.toml
sorm-macros-helpers/src/: lib.rs
sorm-migrator/: Cargo.toml
sorm-migrator-macros/: Cargo.toml
sorm-migrator-macros/src/: lib.rs
sorm-migrator-macros/src/migration/: mod.rs
sorm-migrator-tests/: Cargo.toml
sorm-migrator-tests/src/: lib.rs  main.rs
sorm-migrator-tests/tests/: down.rs  embedded.rs  generate.rs  init.rs  list.rs  prune.rs  reset.rs  up.rs
sorm-migrator/src/: error.rs
sorm-migrator/src/cli/: generate.rs  init.rs  mod.rs  reset.rs  up.rs
sorm-migrator/src/database/: db_left_mig_dir.rs  db_right_codebase.rs  db_runner.rs  file_generator.rs  file_manager.rs  full_db_info.rs  migration_model.rs  queries.rs
sorm-migrator/src/resources/: change_detection.rs  comparison_init.rs  table_events.rs  table_fields.rs  table_indexes.rs  tables.rs
sorm-models/: Cargo.toml
sorm-models/src/: lib.rs  main.rs
sorm-models/src/migrations/: mod.rs
sorm-models/src/models/: alien.rs  attributes.rs  combined.rs  configuration.rs  mod.rs  planet.rs  spaceship.rs  user.rs  user_attributes_in_quote.rs  user_with_generics.rs  visits.rs  weapon.rs  with_generics.rs
sorm-query/: Cargo.toml
sorm-query-macros/: Cargo.toml
sorm-query-macros/src/: lib.rs
sorm-query-macros/src/query/: mod.rs
sorm-query-macros/src/query_builder/: tokenizer.rs
sorm-query-macros/src/statement_parser/: define_function.rs  for_.rs  helpers.rs  if_else.rs  query_chain.rs
sorm-query/src/functions/: array.rs  count.rs  crypto.rs  geo.rs  http.rs  math.rs  meta.rs  mod.rs  parse.rs  rand.rs  script.rs  search.rs  session.rs  sleep.rs  string.rs  time.rs  type_.rs  vector.rs
sorm-query/src/statements/: break_.rs  continue_.rs  define_analyzer.rs  define_database.rs  define_event.rs  define_field.rs  define_index.rs  define_model.rs  define_namespace.rs  define_param.rs  define_scope.rs  define_table.rs  define_token.rs  define_user.rs  for_permission.rs  ifelse.rs  info.rs  let_.rs  live_select.rs  remove_analyzer.rs  remove_database.rs  remove_event.rs  remove_field.rs  remove_function.rs  remove_index.rs  remove_login.rs  remove_model.rs  remove_namespace.rs  remove_param.rs  remove_scope.rs  remove_table.rs  remove_token.rs  remove_user.rs  return_.rs  select.rs  show.rs  sleep.rs  throw.rs  transaction.rs  use_.rs  (+2 more)
sorm-query/src/traits/: db_resources.rs  model.rs  operation.rs  statements.rs  table_resources.rs
sorm-query/src/types/: alias.rs  field.rs  field_type.rs  field_updater.rs  filter.rs  links.rs  params_standard.rs  value_like.rs
sorm-query/src/validators/: mod.rs
sorm-tests/: Cargo.toml
sorm-tests/tests/: arithmetic_operations.rs  crud_helpers.rs  edge_attributes.rs  geometry.rs  migration.rs  node_attributes.rs  param_with_path.rs  partial_updater.rs  pick.rs  query_block.rs  query_code_block.rs  query_code_block_deprecated.rs  query_create.rs  query_create_v2.rs  query_define_function.rs  query_delete.rs  query_ifelse.rs  query_insert.rs  query_macro.rs  query_relate.rs  query_select.rs  query_transaction.rs  query_transaction_deprecated.rs  query_turbo.rs  query_update.rs  setter.rs  simple_array_build.rs  test_query_strings.rs
sorm-tests/tests/snapshots/: geometry__geom_collection-2.snap  geometry__insert_from_select_query-3.snap  geometry__linestring-2.snap  geometry__linestring.snap  geometry__multiline-2.snap  geometry__multiline.snap  geometry__multipoint-2.snap  geometry__multipoint.snap  geometry__multipolygon-2.snap  geometry__multipolygon.snap  geometry__point-2.snap  geometry__point.snap  geometry__polygon-2.snap  geometry__polygon.snap  geometry__polygon_with_exterior_interior-2.snap  geometry__polygon_with_exterior_interior.snap  node_attributes__node_attributes_.snap  node_attributes__node_attributes_with_define_attribute.snap  node_attributes__node_attributes_with_define_fn_attribute.snap  query_create__alien_build_output-2.snap  query_create__alien_build_output.snap  query_create_v2__alien_build_output-2.snap  query_create_v2__alien_build_output.snap  query_ifelse__if_else_statement_and_let_with_block_macro-2.snap  (+12 more)
sorm/docs/en/src/: introduction.md  utility_functions.md
sorm/docs/en/src/concepts/: field_traversal.md
sorm/docs/en/src/data_models/: casting.md  data_types.md  future.md
sorm/docs/en/src/query_helpers/: count_and_aggregation_methods.md  create_update_methods.md  delete_methods.md  introduction_to_utility_functions.md
sorm/docs/en/src/statements/: delete.md
sorm/src/: lib.rs
(+3 files in other folders)
