[package]
name = "sorm-models"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sorm = { workspace = true }
# surreal-sorm-derive = { workspace = true }
# surreal-sorm-query = { workspace = true }
surrealdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
geo = { workspace = true }
chrono = { workspace = true }
typed-builder = { workspace = true }

[lib]
doctest = false
