[package]
name = "migration-filebased"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sorm = { workspace = true }
sorm-models = { workspace = true }
surrealdb = { workspace = true }
tokio = { workspace = true }
# sorm = { path = "../sorm" }
